# open-p4studio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ThirdPartyNotice.txt  batch-install.sh  install.sh  run_p4_tests.sh  run_switchd.sh  run_tofino_model.sh
pkgsrc/bf-diags/: CMakeLists.txt  LICENSES.txt  README  README.md  install_diag_deps.sh  skipfile
pkgsrc/bf-diags/ci/: check-errors  ci-drivers-test  setup-env
pkgsrc/bf-diags/p4_16src/: diag.p4  tf2_dark_mocha_diag.p4
pkgsrc/bf-diags/thrift/: CMakeLists.txt  diag_rpc.thrift
pkgsrc/bf-diags/unit-tests/: diag_slt_ut.py
pkgsrc/bf-drivers/: CMakeLists.txt  LICENSES.txt  README  VERSION
pkgsrc/bf-drivers/bf_switchd/: CMakeLists.txt  accton_wedge_tf2_32x400g_port_map.json  accton_wedge_tf3_32x400g_port_map.json  accton_wedge_tf3_64x400g_port_map.json  aw_py.c  bf_hw_porting_config.c  bf_hw_porting_config.h  bf_model_pltfm_porting.c  bf_model_pltfm_porting.h  bf_switchd.c  bf_switchd.h  bf_switchd_i2c.c  bf_switchd_i2c.h  bf_switchd_log.c  bf_switchd_log.h  bf_switchd_main.c  credo_py.c  diag_py.c  switch_config.c  switch_config.h  switchd_ucli.c  zlog-cfg
pkgsrc/bf-drivers/cint/: bf_drivers_bindings.h  bf_syslibs_bindings.h  bf_utils_bindings.h  cint_standalone.c  makefile
pkgsrc/bf-drivers/doc/: Doxyfile.in
pkgsrc/bf-drivers/include/: avago.doxy  bf_types.doxy  dru_sim.doxy  dvm.doxy  libusd.doxy  lldlib.doxy  mc_mgr.doxy  pdfixed_thrift.doxy  pipe_mgr.doxy  pkt_mgr.doxy  sys.h  traffic_mgr.doxy
pkgsrc/bf-drivers/kdrv/: CMakeLists.txt  bf_kdrv_mod_load  bf_kdrv_mod_unload  bf_knet_mod_load  bf_knet_mod_unload  bf_kpkt_mod_load  bf_kpkt_mod_unload  bf_tun_mod_load  bf_tun_mod_unload
pkgsrc/bf-drivers/pd_api_gen/: CMakeLists.txt  gencli.in  gencli.py  generate_tofino_pd.in  generate_tofino_pd.py  split_pd_thrift.py  tenjin.py  tenjin_util.py
pkgsrc/bf-drivers/pdfixed_thrift/: CMakeLists.txt  bfn_pd_rpc_server.cpp  conn_mgr_pd_rpc_server.ipp  devport_mgr_pd_rpc_server.ipp  knet_mgr_pd_rpc_server.ipp  mc_pd_rpc_server.ipp  mirror_pd_rpc_server.ipp  pal_rpc_server.ipp  pdfixed.doxy  pipemgr_api_rpc_server.ipp  pkt_pd_rpc_server.ipp  plcmt_pd_rpc_server.ipp  port_mgr_pd_rpc_server.ipp  sd_pd_rpc_server.ipp  tm_api_rpc_server.ipp  ts_pd_rpc_server.ipp
pkgsrc/bf-drivers/src/: CMakeLists.txt
pkgsrc/bf-drivers/tools/: bf_model_driver_remote  bf_switchd_dev_status.py  bfrt_json_to_dox.py
pkgsrc/bf-utils/: CMakeLists.txt  Dockerfile  README.md
pkgsrc/bf-utils/examples/: CMakeLists.txt  dynhash_xor.cpp
pkgsrc/bf-utils/src/: CMakeLists.txt  bf_utils.c
pkgsrc/p4-compilers/: CMakeLists.txt
pkgsrc/p4-compilers/bf-asm/: action_bus.cpp  action_bus.h  action_table.cpp  alias_array.h  alloc.h  asm-types.cpp  asm-types.h  atcam_match.cpp  attached_table.cpp  b2j.cpp  bfas.cpp  bfas.h  bfdis.cpp  bfdumpbin.cpp  binary_output.h  bson.cpp  bson.h  checked_array.h  constants.h  counter.cpp  crash.cpp  data_switchbox.h  deparser.cpp  deparser.h  depositfield.cpp  depositfield.h  disasm.cpp  disasm.h  dynhash.cpp  error_mode.cpp  error_mode.h  escape.h  exact_match.cpp  exename.cpp  fdstream.cpp  fdstream.h  flexible_headers.cpp  gateway.cpp  hash_action.cpp  hash_dist.cpp  (+57 more)
pkgsrc/p4-examples/: CMakeLists.txt  README  README.md
pkgsrc/p4-examples/p4_16_programs/: README.md
pkgsrc/p4-examples/tofino/: drivers_test.conf.in  drivers_test_virtual_dev.conf.in  iterator.conf.in  multipipe_custom_bfrt.conf.in  multiprogram_custom_bfrt.conf.in  tofino_single_device.conf.in  tofino_skip_p4.conf.in
pkgsrc/p4-examples/tofino2/: drivers_test.conf.in  drivers_test_virtual_dev.conf.in  iterator.conf.in  multipipe_custom_bfrt.conf.in  multiprogram_custom_bfrt.conf.in  tofino2_single_device.conf.in  tofino2_skip_p4.conf.in
pkgsrc/p4-examples/tofino3/: drivers_test.conf.in  drivers_test_virtual_dev.conf.in  iterator.conf.in  multipipe_custom_bfrt.conf.in  multiprogram_custom_bfrt.conf.in  tofino3_single_device.conf.in  tofino3_skip_p4.conf.in
pkgsrc/ptf-modules/ptf-utils/: CMakeLists.txt  Jenkinsfile  README.md  bfd_utils.py  bfrt_utils.py  bfruntime_base_tests.py  bfruntime_client_base_tests.py  dma_setup.sh  erspan3.py  misc_utils.py  p4runtime_base_tests.py  pal_utils.py  pd_base_tests.py  port_ifdown  port_ifup  port_mapping_clean  port_mapping_setup  ptf_interfaces.py  ptf_port.py  run_ptf_tests.py.in  traffic_protocols.py  traffic_streams.py  traffic_utils.py  veth_setup.sh
pkgsrc/switch-p4-16/: 0001-Add-Internal-port-for-12D-Hardware.patch  CMakeLists.txt  LICENSES.txt  README.md  install_bf_switch_deps.sh  profiles.yaml  skipfile  test-bf-switch.sh
pkgsrc/switch-p4-16/api/: CMakeLists.txt
pkgsrc/switch-p4-16/docs/: 32q_coding_guidelines.md  MCLAG_port_isolation.md  acl.md  bfd.md  bmai_developer_guide.md  ecmp.md  isolation_group.md  l2_vxlan.md  multicast.md  nat.md  portCounters.md  rmac.md  system_acl_priorities.md
pkgsrc/switch-p4-16/doxygen/: Doxyfile.in  main.dox
pkgsrc/switch-p4-16/p4src/: CMakeLists.txt
pkgsrc/switch-p4-16/ptf/: port_config.ini  ports.json  ports_tof2.json  ports_tof3.json  ptf_coverage.py  run_ptf_on_hw.md  tof2_folded_pipeline_ports.json  tof_folded_pipeline_ports.json  tof_fp_ports.json
pkgsrc/switch-p4-16/s3/: CMakeLists.txt  README.md  attribute.c  attribute_util.cpp  bf_rt_backend.cpp  bfd_timer.c  bfd_timer.h  bfdd.h  event.cpp  factory.cpp  genl-packet.h  id_gen.h  log.cpp  log.h  packet_utils.h  psample.h  record.cpp  smi.cpp  store.cpp  store.h  switch_bfdd.c  switch_lpm.c  switch_lpm_int.h  switch_packet.c  switch_store.cpp  switch_utils.c  switch_utils.h
pkgsrc/switch-p4-16/sai/: CMakeLists.txt  README.md  gensairpc.README  gensairpc.pl  sai.cpp  sai_bflib.cpp  sai_rpc_frontend.cpp  saiacl.cpp  saibfd.cpp  saibridge.cpp  saibuffer.cpp  saicounter.cpp  saidebugcounter.cpp  saidtel.cpp  saifdb.cpp  saihash.cpp  saihostif.cpp  saiinternal.h  saiipmc.cpp  saiipmcgroup.cpp  saiisolationgroup.cpp  sail2mc.cpp  sail2mcgroup.cpp  sailag.cpp  saimetadata.h  saimirror.cpp  saimpls.cpp  saimymac.cpp  sainat.cpp  saineighbor.cpp  (+24 more)
pkgsrc/tofino-model/: CMakeLists.txt  README.md
(+25600 files in other folders)
